HACK-602: switch blacks from 2c to 1a, fix copyright spacing, fix tabbing in footer

--- a/css/blog-entry.css
+++ b/css/blog-entry.css
@@ -77,23 +77,23 @@ h1 {
 
 h2 {
     font: 2.3em/100% 'Exo 2', sans-serif;
-    color: #2c2c2c;
+    color: #1A1A1A;
     margin-top: 1.5em;
 }
 
 h3 {
     font: 2em/100% 'Exo 2', sans-serif;
-    color: #2c2c2c;
+    color: #1A1A1A;
 }
 
 p {
     font: 1.5em/180% 'din-lightregular', sans-serif;
-    color: #2c2c2c;
+    color: #1A1A1A;
 }
 
 li {
     font: 1.5em/180% 'din-lightregular', sans-serif;
-    color: #2c2c2c;
+    color: #1A1A1A;
     margin-left: 40px;
 }
 
