--- a/css/blog-media-queries.css
+++ b/css/blog-media-queries.css
@@ -279,13 +279,13 @@ header {
 }
 
 footer {
-    background-color: #2c2c2c;
+    background-color: #1A1A1A;
     padding: 10px 0px;
     border: none;
 }
 
 footer p {
-    color: #2c2c2c;
+    color: #1A1A1A;
 }
 
 }
