--- a/css/blog.css
+++ b/css/blog.css
@@ -53,7 +53,7 @@ FONTS
 }
 
 html {
-  background-color: #2c2c2c;
+  background-color: #1A1A1A;
 }
 
 header {
@@ -172,7 +172,7 @@ nav a:hover {
 
 .blog-content {
     width: 100%;
-    background-color: #2c2c2c;
+    background-color: #1A1A1A;
     padding-top: 1em;
 }
 
@@ -529,7 +529,7 @@ main {
 }
 
 footer {
-    background-color: #2c2c2c;
+    background-color: #1A1A1A;
     text-align: center;
     padding-top: 1em;
     padding-bottom: 1em;
