--- a/css/tag_list.css
+++ b/css/tag_list.css
@@ -5,6 +5,6 @@ body {
 h2 {
     border: none;
     text-shadow: none;
-    color: #2c2c2c;
+    color: #1A1A1A;
     font: 2em/100% 'Exo 2' sans-serif; 
 }
